<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus.talleruno.MainActivity"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

    android:background="@color/colornew"
        >





<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
   android:padding="10dp"


   >
    <ImageView
        android:id="@+id/img_1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/img"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/str_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_1"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/str_2"

       android:textColor="@android:color/white"

        />

    <TextView
        android:id="@+id/str_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_2"
    android:layout_alignBottom="@id/img_1"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"

        />

</RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:padding="0.1dp"
        android:background="@android:color/darker_gray"
        >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/st_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_3"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/st_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_3"
                android:text="@string/st_4"
                android:layout_centerHorizontal="true"
                android:textSize="20sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/st_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/st_5"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/st_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_5"
                android:text="@string/st_6"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/st_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_7"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/st_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_7"
                android:text="@string/st_8"
                android:textSize="20sp" />


        </RelativeLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:background="@android:color/holo_blue_light"
        android:layout_margin="0.5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:background="@android:color/white">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC"
                        android:textSize="20sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC2" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:background="@android:color/white">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC"
                        android:textSize="20sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC2" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:background="@android:color/white">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC"
                        android:textSize="20sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC2" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:background="@android:color/white">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC"
                        android:textSize="20sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC2" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:background="@android:color/white">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC"
                        android:textSize="20sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Str_SC2" />

                </LinearLayout>


            </LinearLayout>







        </LinearLayout>
    </ScrollView>


</LinearLayout>
